fixing up the spacing on the page for about me page for the full size viewport and a little bit for the smaller ones too.

--- a/components/aboutMeContent.module.css
+++ b/components/aboutMeContent.module.css
@@ -121,7 +121,7 @@
 }
 
 .midTitle {
-    text-align: justify;
+    text-align: left;
     leading-trim: both;
     text-edge: cap;
     font-family: MuseoModerno;
@@ -149,11 +149,11 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
+    max-width: 90vw;
+    padding-bottom: 1.2rem;
 }
 
 .calloutEmphasis {
-    leading-trim: both;
-    text-edge: cap;
     font-family: MuseoModerno;
     font-size: 6.25rem;
     font-style: normal;
@@ -170,18 +170,31 @@
     padding-top: 4rem;
 }
 
-.image3 {
+.removeBottomMargin{
+    margin-block-end: 0px;
+}
+
+/* .image3 {
     position: relative;
     width: 20rem;
     height: 25rem;
     overflow: hidden;
     border-radius: 15px;
-}
+} */
 
 @media (max-width: 1030px) {
-    .fullContent {
-        /* background-size: 90%;
-        background-position: center -2vh; */
+
+    .flexContainer1{
+        width: 80%;
+    }
+
+    .imageContainer {
+        max-width: 100%;
+    }
+
+    .f1Text1 {
+        width: 100%;
+        max-width: 41rem;
     }
 
     .flexContainer2 {
@@ -197,8 +210,14 @@
 
     .callout {
         /* keep the same size as title or the other quote 
-        currently it's the same size as title */
+        currently it's the same size as */
+        font-size: 4rem;
         text-align: center;
+        width: 80%;
+    }
+
+    .calloutEmphasis {
+        font-size: 4rem;
     }
 
 }
@@ -235,6 +254,7 @@
     .callout {
         font-size: 4rem;
         text-align: center;
+        width: 90%;
     }
 
     .calloutEmphasis {
